apps/argo-workflow/base/traefik-ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: http-to-https-redirect
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: allow-local-only
spec:
  ipWhiteList:
    sourceRange:
      - 127.0.0.1/32
      - 192.168.1.0/24
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argowf-server-http-redirect
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`argowf.brandt.widdershoven.nl`)
      kind: Rule
      services:
        - kind: TraefikService
          name: noop@internal
      middlewares:
        - name: http-to-https-redirect
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argowf-server
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argowf.brandt.widdershoven.nl`)
      priority: 10
      # middlewares:
      #   - name: allow-local-only
      services:
        - name: argo-server
          scheme: https
          port: 2746
  tls:
    secretName: argowf-tls
